fixed overflow issue

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Lato';
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 h1,
