--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,6 +1,7 @@
 // Typography
 body {
   @include body-font;
+    overflow-x:hidden !important;
 }
 
 h1,
